<resources>
    <string name="app_name">ALC</string>
    <string name="alc">ALC 4 Phase 1</string>
    <string name="my_profile">MY PROFILE</string>
    <string name="about_alc">ABOUT ALC</string>
    <string name="welcome_to_alc">Welcome to ALC 4.0</string>
    <string name="title_activity_alc">About ALC</string>
    <string name="title_activity_profile">My Profile</string>
    <string name="name">Annunziata Kinya</string>
    <string name="track">Track:    Android</string>
    <string name="country">Country:    Kenya</string>
    <string name="email">Email:    kobiaannunziata94@gmail.com</string>
    <string name="phone_number">Phone Number:    +254727867388</string>
    <string name="slack_username">Slack Username:    @Annie Kobia</string>
</resources>
