<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            app:title="@string/alc"
            app:titleTextAppearance="@style/TitleBarTextAppearance" />

    </android.support.design.widget.AppBarLayout>

    <TextView
        android:id="@+id/welcome_text_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="116dp"
        android:layout_marginEnd="32dp"
        android:fontFamily="casual"
        android:text="@string/welcome_to_alc"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/about_alc_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="96dp"
        android:background="@drawable/roundbutton"
        android:fontFamily="casual"
        android:onClick="showALCPage"
        android:text="@string/about_alc"
        app:layout_constraintEnd_toEndOf="@+id/welcome_text_view"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="@+id/welcome_text_view"
        app:layout_constraintTop_toBottomOf="@+id/welcome_text_view" />

    <Button
        android:id="@+id/my_profile_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/roundbutton"
        android:text="@string/my_profile"
        android:fontFamily="casual"
        android:onClick="showProfilePage"
        app:layout_constraintEnd_toEndOf="@+id/about_alc_button"
        app:layout_constraintStart_toStartOf="@+id/about_alc_button"
        app:layout_constraintTop_toBottomOf="@+id/about_alc_button" />
</android.support.constraint.ConstraintLayout>