<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBarLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:titleTextAppearance="@style/TitleBarTextAppearance"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <include
        android:id="@+id/include"
        layout="@layout/content_profile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/profile_photo_imageview"
        android:layout_width="311dp"
        android:layout_height="350dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:paddingBottom="20dp"
        android:paddingRight="20dp"
        android:paddingLeft="20dp"
        android:paddingTop="80dp"
        android:scaleType="centerInside"
        android:src="@drawable/profilephoto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/include" />

    <TextView
        android:id="@+id/profile_textname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="casual"
        android:text="@string/name"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/profile_photo_imageview"
        app:layout_constraintTop_toBottomOf="@+id/profile_photo_imageview" />

    <View
        android:id="@+id/profile_separator"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="16dp"
        android:background="#C4C0C0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_textname" />

    <TextView
        android:id="@+id/track_textview"
        android:layout_width="match_parent"
        android:layout_height="16dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:fontFamily="casual"
        android:textSize="15sp"
        android:text="@string/track"
        app:layout_constraintStart_toStartOf="@+id/profile_photo_imageview"
        app:layout_constraintTop_toBottomOf="@+id/profile_separator" />

    <TextView
        android:id="@+id/country_textview"
        android:layout_width="match_parent"
        android:textSize="15sp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:fontFamily="casual"
        android:text="@string/country"
        app:layout_constraintEnd_toStartOf="@+id/include"
        app:layout_constraintStart_toStartOf="@+id/track_textview"
        app:layout_constraintTop_toBottomOf="@+id/track_textview" />

    <TextView
        android:id="@+id/email_textview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:textSize="15sp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:fontFamily="casual"
        android:text="@string/email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/country_textview"
        app:layout_constraintTop_toBottomOf="@+id/country_textview" />

    <TextView
        android:id="@+id/phonenumber_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="casual"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:textSize="15sp"
        android:text="@string/phone_number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/email_textview"
        app:layout_constraintTop_toBottomOf="@+id/email_textview" />

    <TextView
        android:id="@+id/slackusername_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="casual"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/slack_username"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phonenumber_textview" />


</android.support.constraint.ConstraintLayout>